--- a/RoIActions/RoIActions.csproj
+++ b/RoIActions/RoIActions.csproj
@@ -53,11 +53,13 @@
         <Compile Include="BaseAction.cs" />
         <Compile Include="ChangeMoney.cs" />
         <Compile Include="ChangeRuntime.cs" />
+        <Compile Include="CombatShrine.cs" />
         <Compile Include="HealPlayer.cs" />
         <Compile Include="InventoryBomb.cs" />
         <Compile Include="KillAll.cs" />
         <Compile Include="MovePlayer.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="SpawnBoss.cs" />
         <Compile Include="SpawnMonster.cs" />
         <Compile Include="TimeScale.cs" />
     </ItemGroup>
