--- a/RoIActions/RoIActions.csproj
+++ b/RoIActions/RoIActions.csproj
@@ -57,6 +57,7 @@
         <Compile Include="HealPlayer.cs" />
         <Compile Include="InventoryBomb.cs" />
         <Compile Include="KillAll.cs" />
+        <Compile Include="MountainShrine.cs" />
         <Compile Include="MovePlayer.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="SpawnBoss.cs" />
